--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2 id="projects">ПРОЕКТЫ</h2>
         <ul class="projects">
           <li class="project">
-            <img src="../resources/card1.png" alt="красивый диван">
+            <img src="./resources/card1.png" alt="красивый диван">
             <h3 class="project__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
             <a class="project__link" href="/">Подробнее →</a>
           </li>
