--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             <a class="project__link" href="/">Подробнее →</a>
           </li>
           <li class="project">
-            <img src="../resources/img2.png" alt="красивый диван">
+            <img src="./resources/img2.png" alt="красивый диван">
             <h3 class="project__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
             <a class="project__link" href="/">Подробнее →</a>
           </li>
           <li class="project">
-            <img src="../resources/img3.png" alt="красивый диван">
+            <img src="./resources/img3.png" alt="красивый диван">
             <h3 class="project__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
             <a class="project__link" href="/">Подробнее →</a>
           </li>
@@ -84,19 +84,19 @@
         <h2 class="section-black">УСЛУГИ</h2>
         <ul>
           <li class="service-card">
-            <img src="../resources/sec1.png" alt="интерьер">
+            <img src="./resources/sec1.png" alt="интерьер">
             <p class="text-black">Планировочное решение — от 2500₽/м²</p>
           </li>
           <li class="service-card">
-            <img src="../resources/sec2.png" alt="интерьер">
+            <img src="./resources/sec2.png" alt="интерьер">
             <p class="text-black">Дизайн-проект — от 3000₽/м²</p>
           </li>
           <li class="service-card">
-            <img src="../resources/sec3.png" alt="интерьер">
+            <img src="./resources/sec3.png" alt="интерьер">
             <p class="text-black">Авторский надзор — от 30 000₽ в месяц</p>
           </li>
           <li class="service-card">
-            <img src="../resources/sec4.png" alt="интерьер">
+            <img src="./resources/sec4.png" alt="интерьер">
             <p class="text-black">Комплектация — 5% от стоимости спецификации</p>
           </li>
         </ul>
