--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="container-nav">
       <a class="logo" href="/">
-        <img src="../resources/Метрика.png" alt="">
+        <img src="./resources/Метрика.png" alt="">
       </a>
       <nav class="nav">
         <a class="menu-link" href="#about">О НАС</a>
